--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="slide" id="one">
                 <h2>What Cyberbullying Is and Why It’s Important We Refrain:</h2>
                 <br>
+                <img class="right-img" src="picture1.png"/>
                 <p>
                     Cyberbullying is defined as: the use of electronic communication to bully a person, typically by sending messages of an intimidating or threatening nature. 
                 </p>
@@ -71,6 +72,17 @@
                 <p>Cyberbullying is scary, but it’s real. It’s important we refrain from cyberbullying others because it can have a greater impact than most might anticipate. All human life is precious and should never be taken for granted. </p>
             </div>
             <div class="footer">
+                <p>Bibliography</p>
+                <br>
+                <p style="text-align: left;">
+                “Why Do People Cyberbully?” Delete Cyberbullying, <a href="https://www.endcyberbullying.net/why-do-people-cyberbully">https://www.endcyberbullying.net/why-do-people-cyberbully</a>. 
+                <br><br>
+                Assistant Secretary for Public Affairs (ASPA). “Laws, Policies & Regulations.” StopBullying.gov, 7 Jan. 2022, <a href="https://www.stopbullying.gov/resources/laws">https://www.stopbullying.gov/resources/laws</a>. 
+                <br><br>
+                StopBullyingGov. “Is It Cyberbullying?” YouTube, YouTube, 24 Aug. 2021, <a href="https://www.youtube.com/watch?v=vtfMzmkYp9E">https://www.youtube.com/watch?v=vtfMzmkYp9E</a>.
+                <br><br> 
+                “Effects of Cyber Bullying.” YouTube, YouTube, 30 Nov. 2018, <a href="https://www.youtube.com/watch?v=uOJIVKMjc2o">https://www.youtube.com/watch?v=uOJIVKMjc2o</a>.
+                </p><br>
                 &copy;Jay-lee Sturgeon 2022
             </div>
         </div>
