--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@900&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="header">
             <h1>Cyber Bullying Should Be A Punishable Offence.</h1>
             <h3>By Jay-lee Sturgeon</h3>
+        </div>
+        <div class="navbar">
+            <a onclick="ChangePage(1)">Introduction</a>
+            <a onclick="ChangePage(1)">Tips</a>
+            <a onclick="ChangePage(1)">Targets</a>
+            <a onclick="ChangePage(1)">Effects</a>
+            <a onclick="ChangePage(1)">Conclusion</a>
+            <a onclick="ChangePage(1)">Bibliography</a>
         </div>
         <div class="content">
             <div class="slide" id="one">
@@ -26,6 +35,7 @@
                 <p>When it comes to determining a persons online actions as cyberbullying, some people may brush the actions off as "Just a joke" or "Just messing around".
                     In this short video attached it helps to clearify and show what cyberbullying truly is.
                 </p>
+                <p class="video-link">Informational Video: <a href="https://youtu.be/vtfMzmkYp9E" target="_blank">https://youtu.be/vtfMzmkYp9E</a></p>
                 <div class="video-wrapper">
                     <iframe width="100%" height="auto" src="https://www.youtube.com/embed/vtfMzmkYp9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
@@ -51,7 +61,10 @@
             <div class="slide" id="Four">
                 <h2>What cyberbullying can cause:</h2>
                 <br>
-                <iframe class="right" width="400" height="225" src="https://www.youtube.com/embed/uOJIVKMjc2o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p class="video-link">Informational Video: <a href="https://www.youtube.com/watch?v=uOJIVKMjc2o" target="_blank">https://www.youtube.com/watch?v=uOJIVKMjc2o</a></p>
+                <div class="video-wrapper">
+                    <iframe class="right" width="400" height="225" src="https://www.youtube.com/embed/uOJIVKMjc2o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
                 <ul>
                     <li>Anxiety</li>
                     <li>Depression</li>
